feat: made a one-page-up navigation using ctrl+backspace

--- a/src/i18n/src/en.yml
+++ b/src/i18n/src/en.yml
@@ -270,6 +270,7 @@ menu:
     close: Close tab
     openClosed: Open closed tab
     hardReload: Hard refresh
+    onePageUp: Go one page up
   tools: Tools
   devTools: Developer tools
   currentTab: This tab
