--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -1,5 +1,5 @@
-# When translating, it's best to leave the name unchanged
 name: Nereid
+unimplemented: Данная функция недоступна в этой версии
 common:
   downloads: Загрузки
   settings: Настройки
@@ -64,7 +64,8 @@ common:
       prompt: ${hostname} хочет контролировать ваш курсор мыши
     openExternal:
       name: Открытие сторонних приложений
-      desc: Позволяет открывать сторонние приложения. Если вы разрешите это, сайт сможет открывать почти любое приложение без спроса.
+      desc: Позволяет открывать сторонние приложения. Если вы разрешите это, сайт
+        сможет открывать почти любое приложение без спроса.
       prompt: ${hostname} хочет открыть "${app}"
     idleDetection:
       name: Взаимодействие
@@ -79,6 +80,9 @@ ui:
     alert: Сообщение от ${site}
     confirm: Подтвердите ваше действие на ${site}
     prompt: Совершите ввод на ${site}
+    permission:
+      alt: Разрешение ${name}
+      appIcon: Иконка приложения ${app}
   tools:
     load-stop: Остановить загрузку
     load-refresh: Перезагрузить страницу
@@ -108,10 +112,13 @@ ui:
     message-internal: Это внутренняя страница Nereid.
     message-local: Это локальный файл
     message-insecure: Ваше подключение не защищено.
-    description-secure: |
-      Ваша информация (пароли или номера кредитных карт) будет передана этому сайту в зашифрованном виде и не может быть перехвачена злоумышленниками.
+    description-secure: >
+      Ваша информация (пароли или номера кредитных карт) будет передана этому
+      сайту в зашифрованном виде и не может быть перехвачена злоумышленниками.
+
       Всегда проверяйте, на правильном ли вы сайте перед вводом какой-либо информации.
-    description-insecure: Информация, которую вы вводите на этом сайте может быть перехвачена злоумышленниками.
+    description-insecure: Информация, которую вы вводите на этом сайте может быть
+      перехвачена злоумышленниками.
     button-viewCertificate: Посмотреть сертификат
     button-cookieFiles: Файлы куки
     button-siteSettings: Настройки сайта...
@@ -133,6 +140,12 @@ ui:
     suggestion: Расположите свои закладки здесь, на панели закладок
     edit: Редактировать
     delete: Удалить
+  bookmarks:
+    add: Добавить в закладки...
+    addOrRemove: Добавить или удалить закладку...
+    list: Папки
+    addToFolder: Добавить в папку
+    removeFromFolder: Удалить из папки
 windows:
   cookieViewer:
     title: Файлы куки ${hostname}
@@ -190,10 +203,13 @@ net-error:
       - "Все, что мы знаем, это код:"
   noSiteAccess:
     - Мы не можем получить доступ к сайту.
-    - |
+    - >
       Вот, что вы можете сделать:<br>
+
       <ul><li>Проверьте, есть ли опечатка в имени хоста <b>"${hostname}"</b>.</li>
+
       <li>Запустите диагностику сети</li>
+
       <li>Поменяйте настройки DNS over HTTPS</li>
   noFileAccess:
     - Мы не можем получить доступ к этому файлу
@@ -215,16 +231,21 @@ net-error:
     - Возможно, вы подключились к другой сети
   blockedByResponse:
     - Эта страница не позволила себя так отобразить.
-    - Сервер отправил запрос, предотвращающий показ этой страницы, к примеру, на других сайтах.
+    - Сервер отправил запрос, предотвращающий показ этой страницы, к примеру, на
+      других сайтах.
   blockedbyCSP:
     - Запрос был заблокирован CSP.
-    - <a target='-blank' href='https://en.wikipedia.org/wiki/Content_Security_Policy' class='btn'>Content Security Policy. (англ.)</a>
+    - <a target='-blank'
+      href='https://en.wikipedia.org/wiki/Content_Security_Policy'
+      class='btn'>Content Security Policy. (англ.)</a>
   closed:
     - Соединение закрыто.
   reset:
     - Соединение прервано.
-    - |
-      Что-то не позволило Nereid подключиться к серверу. Возможно, ваш файерволл или интернет-провайдер заблокировали запрос
+    - >
+      Что-то не позволило Nereid подключиться к серверу. Возможно, ваш файерволл
+      или интернет-провайдер заблокировали запрос
+
       или сервер внезапно остановился.
   refused:
     - Соединение отказано.
@@ -243,7 +264,8 @@ net-error:
     - Это все, что нам известно
   noHTTPS:
     - Этот сайт не может обеспечить защищенное подключение.
-    - Возможно, версия SSL клиента и сервера не совпадают. Также возможно, что этот сайт не поддерживает HTTPS вовсе.
+    - Возможно, версия SSL клиента и сервера не совпадают. Также возможно, что
+      этот сайт не поддерживает HTTPS вовсе.
   invalidURL:
     - Некорректный URL
     - Страница '<b>${url}</b>' не существует или была перемещена.
@@ -260,6 +282,7 @@ menu:
     close: Закрыть вкладку
     openClosed: Открыть закрытую вкладку
     hardReload: Полная перезагрузка
+    onePageUp: На сегмент назад
   tools: Инструменты
   devTools: Developer tools
   currentTab: Эта вкладка
@@ -270,9 +293,9 @@ menu:
   fullscreen: Полный экран
   emojiPanel: Показать панель эмодзи
   zoom:
+    "0": Размер по умолчанию
     in: Приблизить
     out: Отдалить
-    0: Размер по умолчанию
     info: "Масштаб: ${zoom}%"
   appMenu:
     file: Файл
@@ -335,14 +358,17 @@ pages:
     begin: Начать
     language:
       title: Выберите язык
-      note: |
-        Nereid поддерживает не все языки. Если вы выберите неподдерживаемый язык, вам будет предложено выбрать другой язык из
+      note: >
+        Nereid поддерживает не все языки. Если вы выберите неподдерживаемый
+        язык, вам будет предложено выбрать другой язык из
+
         списка поддерживаемых Nereid. Сайты все равно будут показываться на изначально выбранном языке
       noTranslation: "Nereid не поддерживает ваш язык. Выберите язык для Nereid:"
       restartNotice: Nereid перезапустится, чтобы применить изменения
     themes:
       title: Выберите тему
-      note: Этот выбор повлияет на тему Nereid и некоторых сайтов, которые вы посещаете.
+      note: Этот выбор повлияет на тему Nereid и некоторых сайтов, которые вы
+        посещаете.
       light: Светлая
       dark: Темная
       system: Системная
@@ -403,10 +429,12 @@ pages:
         description: Встроенные страницы не смогут запрашивать разрешения
       useHintingService:
         title: Использовать сервис подсказок
-        description: Nereid будет отправлять запросы на сервер поисковой системы, когда вы набираете свой запрос. Эта функция отключена в приватном режиме.
+        description: Nereid будет отправлять запросы на сервер поисковой системы, когда
+          вы набираете свой запрос. Эта функция отключена в приватном режиме.
       hideSessionForHints:
         title: Скрывать вашу личность при получении подсказок
-        description: Это поможет избежать некоторого трекинга, но может сделает подсказки менее персонализированными.
+        description: Это поможет избежать некоторого трекинга, но может сделает
+          подсказки менее персонализированными.
       httpsOnly: Использовать только защищенные соединения (HTTPS)
     search:
       title: Поисковые системы
@@ -451,7 +479,8 @@ pages:
     languages:
       title: Языки
       label-all: "Выбранный язык:"
-      notice: Nereid не переведен на все языки, поддерживаемые системой. Выберите язык, поддерживаемый Nereid.
+      notice: Nereid не переведен на все языки, поддерживаемые системой. Выберите
+        язык, поддерживаемый Nereid.
       label-nereid: "Язык Nereid:"
       dialog: Выберите язык
       restart-notification: Перезапустите Nereid чтобы применить изменения
@@ -498,27 +527,53 @@ pages:
       userData: Путь к пользовательским файлам
       cache: Путь к кэшу
       app: Путь установки
-    FOSSNotice: Nereid использует ${electron} и ${chromium}, - проекты с открытым исходным кодом.
+    FOSSNotice: Nereid использует ${electron} и ${chromium}, - проекты с открытым
+      исходным кодом.
     licenses:
       electron: Лицензия Electron
       chromium: Лицензии Chromium
     otherLicenses: Другие лицензии
-LocalizedTOS: |
+  newtab:
+    startPanel:
+      addItem: Добавить сайт
+      button-edit: Изменить
+      button-delete: Удалить
+      edit-panel: Изменение "${name}"
+      add-panel: Добавление сайта
+      button-save: Сохранить
+      delete:
+        title: Вы точно хотите удалить "${name}"?
+        button-delete: Удалить
+      edit:
+        name: Имя
+        url: URL-адрес
+LocalizedTOS: >
   Здравствуйте. Nereid - бесплатная программа с открытым исходным кодом.
+
   Это соглашение разрешает вам использовать и модифицировать Nereid без ограничений.
+
   Автор этого ПО освобождается от всякой ответственности за урон, причиненный этим ПО или его использованием.
 
+
   [ВАЖНО]
+
   В закрытой альфа версии, Nereid всегда отправляет ваши данные на свои сервера.
+
   В этих данных содержатся: Ваша ОС, ее версия, физические идентификаторы вашего компьютера, сообщения об ошибках.
+
   Эти данные не должны включать в себя вашу историю или другие персональные данные, но в некоторых случаях, например из-за ошибки в коде, такие данные могут быть включены.
+
 
   Это ПО распростроняется лицензией MIT: (неофициальный перевод)
 
+
   Copyright (c) 2022 @wheezard
+
 
   Данная лицензия разрешает лицам, получившим копию данного программного обеспечения и сопутствующей документации (в дальнейшем именуемыми «Программное обеспечение»), безвозмездно использовать Программное обеспечение без ограничений, включая неограниченное право на использование, копирование, изменение, слияние, публикацию, распространение, сублицензирование и/или продажу копий Программного обеспечения, а также лицам, которым предоставляется данное Программное обеспечение, при соблюдении следующих условий:
 
+
   Указанное выше уведомление об авторском праве и данные условия должны быть включены во все копии или значимые части данного Программного обеспечения.
+
 
   ДАННОЕ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ ПРЕДОСТАВЛЯЕТСЯ «КАК ЕСТЬ», БЕЗ КАКИХ-ЛИБО ГАРАНТИЙ, ЯВНО ВЫРАЖЕННЫХ ИЛИ ПОДРАЗУМЕВАЕМЫХ, ВКЛЮЧАЯ ГАРАНТИИ ТОВАРНОЙ ПРИГОДНОСТИ, СООТВЕТСТВИЯ ПО ЕГО КОНКРЕТНОМУ НАЗНАЧЕНИЮ И ОТСУТСТВИЯ НАРУШЕНИЙ, НО НЕ ОГРАНИЧИВАЯСЬ ИМИ. НИ В КАКОМ СЛУЧАЕ АВТОРЫ ИЛИ ПРАВООБЛАДАТЕЛИ НЕ НЕСУТ ОТВЕТСТВЕННОСТИ ПО КАКИМ-ЛИБО ИСКАМ, ЗА УЩЕРБ ИЛИ ПО ИНЫМ ТРЕБОВАНИЯМ, В ТОМ ЧИСЛЕ, ПРИ ДЕЙСТВИИ КОНТРАКТА, ДЕЛИКТЕ ИЛИ ИНОЙ СИТУАЦИИ, ВОЗНИКШИМ ИЗ-ЗА ИСПОЛЬЗОВАНИЯ ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ ИЛИ ИНЫХ ДЕЙСТВИЙ С ПРОГРАММНЫМ ОБЕСПЕЧЕНИЕМ.
