--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -1,5 +1,12 @@
 name: Nereid
 unimplemented: Данная функция недоступна в этой версии
+configVersionMismatch:
+  title: Файл настроек был создан в новой или неподдерживаемой версии Nereid,
+    поэтому, он не может быть прочитан. Нажмите "Перезаписать", чтобы
+    перезаписать его, теряя прошлые настройки. Нажмите "Выйти", чтобы закрыть
+    Nereid.
+  button-overwrite: Перезаписать
+  button-exit: Выйти
 common:
   downloads: Загрузки
   settings: Настройки
