--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -153,6 +153,25 @@ ui:
     list: Папки
     addToFolder: Добавить в папку
     removeFromFolder: Удалить из папки
+  adblocker:
+    status-good: Реклама и трекеры заблокированы
+    status-bad: Реклама и трекеры не заблокированы
+    status-neutral: Рекламы или трекеров не обнаружено
+    blockedAmount: "Заблокировано трекеров: ${count}"
+    list: Список трекеров
+    switch-off: Выключить блокировку на ${hostname}
+    switch-on: Включить блокировку на ${hostname
+    warnings:
+      active: Иногда, из-за блокировщика рекламы некоторые страницы могут некорректно
+        отображать контент. Если страница плохо загружается, попробуйте
+        выключить адблок.
+      inactive: Реклама и трекеры на ${hostname} не блокируются, потому что он в белом
+        списке. Если адблок не мешает работе с сайтом, настоятельно
+        рекомендуется его включить.
+      malfunction: В блокировщике рекламы произошла критическая ошибка.
+      notReady: Страница загрузилась до загрузки блокировщика рекламы, так что
+        некоторые трекеры были проигнорированы.
+      button-reload: Перезагрузить страницу
 windows:
   cookieViewer:
     title: Файлы куки ${hostname}
