--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -456,7 +456,8 @@ pages:
           sites:
             title: Сайты
             more: Ещё...
-            with-permissions: Сайты с разрешениями
+            withPermissions: Сайты с разрешениями
+            reset: Сбросить все разрешения этого сайта
           sitePage:
             invalidURL: Неверный URL
             hostPlaceholder: Введите имя хоста
