--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -53,6 +53,10 @@ common:
       name: Захват экрана
       desc: Позволяет снимать ваш экран
       prompt: ${hostname} хочет включить запись экрана
+    sensors:
+      name: Датчики света и движения
+      desc: Позволяет использовать датчики света и/или движения на вашем устройстве
+      prompt: ${hostname} хочет использовать датчики света/движения.
     DRM:
       name: DRM
       desc: Позволяет проигрывать контент, защищенный Digital Rights Management
