--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -82,6 +82,10 @@ common:
       name: Взаимодействие
       desc: Позволяет узнавать, используете ли вы это устройство
       prompt: ${hostname} хочет знать, если вы не используете устройство
+    screenWakeLock:
+      name: Отмена блокировки экрана
+      desc: Позволяет предотвращать автоматическую блокировку экрана
+      prompt: ${hostname} хочет уметь предотвращать блокировку экрана
 navigation:
   back: Назад
   forward: Вперед
